--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: Deepin Packages Builder <packages@deepin.com>
 Build-Depends: debhelper,
                dh-golang,
                golang-any,
+               golang-dlib-dev
 Standards-Version: 4.0.0
 Homepage: https://github.com/linuxdeepin/go-dbus-factory
 XS-Go-Import-Path: github.com/linuxdeepin/go-dbus-factory
