--- a/net.reactivated.fprint/config.json
+++ b/net.reactivated.fprint/config.json
@@ -10,6 +10,15 @@
           "Type": "manager"
         }
       ]
+    },
+    {
+      "Type": "Device",
+      "Interfaces": [
+        {
+          "Name": "net.reactivated.Fprint.Device",
+          "Type": "device"
+        }
+      ]
     }
   ]
 }
