--- a/org.freedesktop.colormanager/config.json
+++ b/org.freedesktop.colormanager/config.json
@@ -20,8 +20,7 @@
           "Fixes": {
             "p/Metadata": {
               "Type": "PropProfileMetadata",
-              "ValueType": "map[string]string",
-              "EmptyValue": "nil"
+              "ValueType": "map[string]string"
             }
           }
         }
