--- a/org.freedesktop.secrets/config.json
+++ b/org.freedesktop.secrets/config.json
@@ -45,8 +45,7 @@
           "Fixes": {
             "p/Attributes": {
               "Type": "PropItemAttributes",
-              "ValueType": "map[string]string",
-              "EmptyValue": "nil"
+              "ValueType": "map[string]string"
             },
             "m/GetSecret": [
               {
