feat(generator): common property type define supported
Change-Id: Icc3810eeffae811898920b9af114d34c477b7d10

--- a/com.deepin.daemon.audio/config.json
+++ b/com.deepin.daemon.audio/config.json
@@ -19,13 +19,10 @@
           "Type": "sink",
           "Fixes": {
             "p/Ports": {
-              "Type": "PropSinkPorts",
-              "ValueType":"[]PortInfo"
+              "RefType": "PropPortInfoSlice"
             },
             "p/ActivePort": {
-              "Type": "PropSinkActivePort",
-              "ValueType":"PortInfo",
-              "EmptyValue": "$T{}"
+              "RefType": "PropPortInfo"
             }
           }
         }
@@ -39,13 +36,10 @@
           "Type": "source",
           "Fixes": {
             "p/Ports": {
-              "Type": "PropSourcePorts",
-              "ValueType":"[]PortInfo"
+              "RefType": "PropPortInfoSlice"
             },
             "p/ActivePort": {
-              "Type": "PropSourceActivePort",
-              "ValueType":"PortInfo",
-              "EmptyValue": "$T{}"
+              "RefType": "PropPortInfo"
             }
           }
         }
@@ -59,6 +53,17 @@
           "Type": "sinkInput"
         }
       ]
+    }
+  ],
+  "PropertyTypes": [
+    {
+      "Type": "PropPortInfoSlice",
+      "ValueType": "[]PortInfo"
+    },
+    {
+      "Type": "PropPortInfo",
+      "ValueType": "PortInfo",
+      "EmptyValue": "$T{}"
     }
   ]
 }
