feat: add org.bluez ObjectManager
Change-Id: Ife85847605ca648e7a68838aaa4ea320cf0e0e06

--- a/org.bluez/config.json
+++ b/org.bluez/config.json
@@ -2,6 +2,16 @@
   "Service": "org.bluez",
   "Objects": [
     {
+      "Type": "ObjectManager",
+      "XMLFile": "-",
+      "Path": "/",
+      "Interfaces": [
+        {
+          "Name": "org.freedesktop.DBus.ObjectManager"
+        }
+      ]
+    },
+    {
       "Type": "Manager",
       "Path": "/org/bluez",
       "Interfaces": [
