chore: networkmanager accessPoint add accessor
Change-Id: I77038890e5064bf846ba0922ec31af7cde0ea9ee

--- a/org.freedesktop.networkmanager/config.json
+++ b/org.freedesktop.networkmanager/config.json
@@ -6,7 +6,8 @@
       "Interfaces": [
         {
           "Name": "org.freedesktop.NetworkManager.AccessPoint",
-          "Type": "accessPoint"
+          "Type": "accessPoint",
+          "Accessor": "AccessPoint"
         }
       ]
     },
