feat: add org.freedesktop.NetworkManager ObjectManager
Change-Id: Ia82c382ba7fbd2926808131727d0c54664019339

--- a/org.freedesktop.networkmanager/config.json
+++ b/org.freedesktop.networkmanager/config.json
@@ -2,6 +2,16 @@
   "Service": "org.freedesktop.NetworkManager",
   "Objects": [
     {
+      "Type": "ObjectManager",
+      "XMLFile": "-",
+      "Path": "/org/freedesktop",
+      "Interfaces": [
+        {
+          "Name": "org.freedesktop.DBus.ObjectManager"
+        }
+      ]
+    },
+    {
       "Type": "AccessPoint",
       "Interfaces": [
         {
