change(api): update com.deepin.daemon.kwayland

--- a/com.deepin.daemon.kwayland/config.json
+++ b/com.deepin.daemon.kwayland/config.json
@@ -11,6 +11,35 @@
           "Accessor": "OutputManagement"
         }
       ]
+    },
+    {
+      "Type": "WindowManager",
+      "Path": "/com/deepin/daemon/KWayland/WindowManager",
+      "Interfaces": [
+        {
+          "Name": "com.deepin.daemon.KWayland.WindowManager",
+          "Type": "windowManager",
+          "Accessor": "WindowManager"
+        }
+      ]
+    },
+    {
+      "Type": "Window",
+      "Interfaces": [
+        {
+          "Name": "com.deepin.daemon.KWayland.PlasmaWindow",
+          "Type": "window",
+          "Accessor": "Window",
+          "Fixes": {
+            "m/Geometry": [
+              {
+                "Name": "argout0",
+                "Type": "Rect"
+              }
+            ]
+          }
+        }
+      ]
     }
   ]
 }
