change(api): update com.deepin.daemon.helper.Backlight
add DDCCI

--- a/com.deepin.daemon.helper.backlight/config.json
+++ b/com.deepin.daemon.helper.backlight/config.json
@@ -10,6 +10,16 @@
           "Type": "backlight"
         }
       ]
+    },
+    {
+      "Type": "DDCCI",
+      "Path": "/com/deepin/daemon/helper/Backlight/DDCCI",
+      "Interfaces": [
+        {
+          "Name": "com.deepin.daemon.helper.Backlight.DDCCI",
+          "Type": "ddcci"
+        }
+      ]
     }
   ]
 }
