change(api): update com.deepin.daemon.authenticate.fingerprint CommonDevice
* add CommonDevice

--- a/com.deepin.daemon.authenticate.fingerprint/config.json
+++ b/com.deepin.daemon.authenticate.fingerprint/config.json
@@ -12,6 +12,18 @@
           "Accessor": "Device"
         }
       ]
+    },
+    {
+      "Type": "CommonDevice",
+      "Path": "",
+      "Interfaces": [
+        {
+          "Name": "com.deepin.daemon.Authenticate.Fingerprint.CommonDevice",
+          "NoGetInterfaceName": true,
+          "Type": "commonDevice",
+          "Accessor": "CommonDevice"
+        }
+      ]
     }
   ]
 }
