chore(warn): Modify golangcli-lint run warn
Log: 修改项目静态检测警告, 删除多余接口, 修改一个private的接口为public
Change-Id: Ie248d952b5f8e58a17691dbf7deee129cfe8b3bf
Reviewed-on: http://gerrit.uniontech.com/c/go-dbus-factory/+/688
Reviewed-by: <mailman@uniontech.com>
Reviewed-by: wubowen <wubowen@uniontech.com>
Tested-by: <mailman@uniontech.com>

--- a/org.freedesktop.networkmanager/config.json
+++ b/org.freedesktop.networkmanager/config.json
@@ -297,7 +297,7 @@
         },
         {
           "Name": "org.freedesktop.NetworkManager.Device.Statistics",
-          "Accessor": "statistics",
+          "Accessor": "Statistics",
           "Type": "deviceStatistics"
         },
         {
