change(api): update org.bluez.obex
* add ObjectManager

Log: 为 org.bluez.obex 添加 ObjectManager
Change-Id: Ib6dae5138f8eb42648751f023f373c1c213452a5
Reviewed-on: http://gerrit.uniontech.com/c/go-dbus-factory/+/1041
Reviewed-by: <mailman@uniontech.com>
Reviewed-by: wubowen <wubowen@uniontech.com>
Reviewed-by: songwentai <songwentai@uniontech.com>
Tested-by: <mailman@uniontech.com>

--- a/org.bluez.obex/config.json
+++ b/org.bluez.obex/config.json
@@ -2,6 +2,16 @@
   "Service": "org.bluez.obex",
   "Objects": [
     {
+      "Type": "ObjectManager",
+      "XMLFile": "-",
+      "Path": "/",
+      "Interfaces": [
+        {
+          "Name": "org.freedesktop.DBus.ObjectManager"
+        }
+      ]
+    },
+    {
       "Type": "Manager",
       "Path": "/org/bluez/obex",
       "Interfaces": [
