chore: Modify control Description data
修改control文件的Description文件

Log: 按照要求详细描述Description信息
Change-Id: I52d791aa006694d440cb08e54b21097d0422a1db
Reviewed-on: http://gerrit.uniontech.com/c/go-dbus-factory/+/3850
Reviewed-by: <mailman@uniontech.com>
Reviewed-by: songwentai <songwentai@uniontech.com>
Reviewed-by: liuyong <liuyong@uniontech.com>
Tested-by: <mailman@uniontech.com>

--- a/debian/control
+++ b/debian/control
@@ -17,3 +17,4 @@ Depends: ${shlibs:Depends},
          ${misc:Depends},
          golang-dlib-dev
 Description: mirrored from https://cr.deepin.io/#/admin/projects/go-dbus-factory
+ Convenient go binding code for automatically generating DBus services
