--- a/debian/control
+++ b/debian/control
@@ -16,4 +16,5 @@ Architecture: all
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          golang-dlib-dev
-Description: mirrored from https://cr.deepin.io/#/admin/projects/go-dbus-factory
+Description: The project is a packaging dependency
+ mirrored from https://cr.deepin.io/#/admin/projects/go-dbus-factory
