feat(ukey): 添加对ukey的dbus访问接口
添加对ukey的dbus访问接口

Log: 添加对ukey的dbus访问接口
Task: https://pms.uniontech.com/zentao/task-view-52659.html

Change-Id: Ifc3578d5bb65a3eebb3aa1428f49dca52ebe3f57

--- a/com.deepin.daemon.authenticate/config.json
+++ b/com.deepin.daemon.authenticate/config.json
@@ -22,6 +22,17 @@
           "Accessor": "Fingerprint"
         }
       ]
+    },
+    {
+      "Type": "UKey",
+      "Path": "/com/deepin/daemon/Authenticate/UKey",
+      "Interfaces": [
+        {
+          "Name": "com.deepin.daemon.Authenticate.UKey",
+          "Type": "ukey",
+          "Accessor": "UKey"
+        }
+      ]
     }
   ]
 }
